[package]
name = "hexagon-tiles"
version = "0.2.0"
authors = ["Igal Alkon", "Madeline Sparkles"]
edition = "2018"
description = "A utility library that allows working with the hexagon shape and related math."
license = "Zlib"
repository = "https://github.com/Mg138/hexagon-tiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = { version = "1.0.1", features = ["derive"] }
num = "0.4.0"